# sits-dl

./: .gitignore  README.md  inductor_options.txt  notest.txt  pyproject.toml  test-run.sh
apps/: inference.py
sits_dl/: forestmask.py  inference.py  lstm.py  predict.py  prediction.py  sbert.py  tensordatacube.py  transformer.py  workers.py
